# CRAbE

./: .gitignore  Cargo.toml  README.md  build.rs
crabe_framework/: Cargo.toml
crabe_framework/src/data/: field.rs
crabe_protobuf/: Cargo.toml  build.rs
crabe_protobuf/proto/tools/: software.proto
crabe_ssl/: Cargo.toml
crabe_ssl/src/: lib.rs
crabe_ssl/src/decision_making/: commands_wrapper.rs  plankton.rs
crabe_ssl/src/filters/: detections.rs  filter.rs  geometry.rs  mod.rs
crabe_ssl/src/inputs_outputs/: game_controller.rs  mod.rs  multicast_client.rs  simulation_client.rs  usb_client.rs  vision.rs
crabe_ssl/src/inputs_outputs/guard/: limit_speed.rs  mod.rs
crabe_ssl/src/libs/: constants.rs  data.rs  mod.rs  robot.rs
crabe_ssl/src/libs/tasks/inputs/: input.rs
proto/tools/: annotations.proto  common.proto  software.proto  tools.proto
src/: lib.rs
src/decision_making/: command_wrapper.rs  commands_wrapper.rs  mod.rs  pipeline.rs  plankton.rs  websocket.rs  zmq.rs
src/filters/: detections.rs  filter.rs  game_controller.rs  geometry.rs  mod.rs
src/guard/: limit_speed.rs  mod.rs
src/inputs_outputs/: game_controller.rs  mod.rs  multicast_client.rs  output.rs  simulation_client.rs  ubs_client.rs  usb_client.rs  vision.rs
src/inputs_outputs/guard/: limit_speed.rs
src/libs/: cli.rs  constants.rs  data.rs  maths.rs  mod.rs  pipeline.rs  robot.rs
src/libs/protobuf/: game_controller_packet.rs  mod.rs  robot_packet.rs  simulation_packet.rs  tools_packet.rs  vision_packet.rs
src/libs/skills/: dribble.rs  goto.rs  kick.rs  mod.rs  pass.rs
src/libs/tasks/: mod.rs  task.rs
src/libs/tasks/examples/: mod.rs  move_forward.rs  move_to_ball.rs  pass.rs
src/libs/tasks/filters/: mod.rs  passoire.rs
src/libs/tasks/inputs/: game_controller.rs  gamepad.rs  input.rs  mod.rs  passoire.rs  vision.rs  zmq.rs
src/libs/tasks/inputs_outputs/: tools.rs
src/libs/tasks/outputs/: ball_printer.rs  mod.rs  sim_commands.rs  usb_commands.rs  zmq.rs
src/libs/utils/: circular_array.rs
