[package]
name = "software"
version = "0.1.0"
edition = "2021"
authors = ["NAMeC"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.3"
bytes= "1.3"
prost-types = "0.11.2"
clap = { version = "4.0.29", features = ["derive"] }
nalgebra = { version = "0.31.4", features = ["serde-serialize"] }
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
zmq = "0.10.0"
ctrlc = "3.2.4"
log = "0.4.17"
env_logger = "0.10.0"
serialport = "4.2.0"

[build-dependencies]
prost-build= "0.11"
