[package]
name = "software"
version = "0.1.0"
edition = "2021"
authors = ["NAMeC"]
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
prost = "0.11.6"
bytes= "1.3"
prost-types = "0.11.6"
clap = { version = "4.1.1", features = ["derive"] }
nalgebra = { version = "0.32.1", features = ["serde-serialize"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
zmq = "0.10.0"
ctrlc = "3.2.4"
log = "0.4.17"
env_logger = "0.10.0"
serialport = { git= "https://github.com/metta-systems/serialport-rs.git" }
gilrs = "0.10.1"
tungstenite = "0.18.0"
futures-channel = "0.3.26"
futures-util = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
async-channel = "1.8.0"
flume = "0.10.14"

[build-dependencies]
prost-build= "0.11"

