[package]
name = "crabe_ssl"
version = "0.1.0"
edition = "2021"
authors = ["NAMeC"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.6"
bytes= "1.4"
prost-types = "0.11.6"
clap = { version = "4.1.4", features = ["derive"] }
nalgebra = { version = "0.32.1", features = ["serde-serialize"] }
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
ctrlc = "3.2.5"
log = "0.4.17"
env_logger = "0.10.0"
serialport = { git= "https://github.com/metta-systems/serialport-rs.git" }
gilrs = "0.10.1"
crabe_protobuf = { path = "../crabe_protobuf" }
crabe_framework = { path = "../crabe_framework" }